Prevent jumping of toggle button in element window
The toggle button was jumping if a parent element was marked as hidden and the nested element was not marked as hidden. Now the toggle stays in its position, if a other element above is switched to hidden.

--- a/app/assets/stylesheets/alchemy/elements.scss
+++ b/app/assets/stylesheets/alchemy/elements.scss
@@ -78,7 +78,7 @@ alchemy-tinymce {
   line-height: 1;
   max-width: 85%;
 
-  .element-hidden & {
+  .element-hidden > & {
     max-width: 65%;
   }
 
@@ -113,10 +113,6 @@ alchemy-tinymce {
   box-shadow: none;
   padding: 0;
   margin: 0 0 0 auto;
-
-  .element-hidden & {
-    margin-left: unset;
-  }
 
   &:hover {
     &:not(:focus):not(:active) {
